Fixed off centered button

--- a/CSS/bootstrap/LP/style.css
+++ b/CSS/bootstrap/LP/style.css
@@ -44,6 +44,8 @@ header.startup h1 {
 
 .btn-xl {
   padding: 1rem 2rem; 
+  display: block;
+  margin: 0 auto;
 }
 
 .btn-primary {
@@ -57,3 +59,6 @@ header.startup h1 {
   cursor: pointer;
 }
   
+#mc_embed_signup form {
+  padding: 0!important;
+}
